# monero-c

./: README.md  monero-c.sln
.github/workflows/: build-macos-arm64.yml  build-macos-x64.yml  build.yml  documentation.yml  release.yml
CsharpTestApp/: CsharpTestApp.csproj  Program.cs
MoneroC/: CMakeLists.txt
MoneroC/src/: monero_abi_bridge.cpp  monero_abi_bridge.h
